DTS-44062: slingshot integration changes